Fixed Page Jumping

--- a/AG_status_bar.css
+++ b/AG_status_bar.css
@@ -49,7 +49,7 @@
     outline: none;
     top: -2px;
     margin-right: 3px;
-    margin-left: 5px;
+    margin-left: 4px;
 }
 
 .onclick-menu:before {
